--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             of pastry arts. With a fervent passion for creating delectable delights
             and an unwavering commitment to excellence.
         </p>
-        <a href="#about"><button class="btn">about me <i class="fas fa-user"></i></button></a>
+        <a href="resume/Faustine Indeche.pdf" target="_blank"><button class="btn">My resume</button></a>
 
     </section>
 
@@ -151,7 +151,7 @@
 
     <!-- about section starts  -->
 
-    <section class="about" id="about">
+    <section class="about">
 
         <h1 class="heading"> <span>about</span> me </h1>
 
