--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             of pastry arts. With a fervent passion for creating delectable delights
             and an unwavering commitment to excellence.
         </p>
-        <a href="resume/Faustine Indeche.pdf" target="_blank"><button class="btn">My resume</button></a>
+        <a href="resume/Faustine_Indeche_CV.pdf" target="_blank"><button class="btn">My resume</button></a>
 
     </section>
 
