--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
     <!-- about section starts  -->
 
-    <section class="about">
+    <section class="about" id="about">
 
         <h1 class="heading"> <span>about</span> me </h1>
 
